# rustylight-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md
docs/superpowers/plans/: 2026-05-16-rustylight-server.md  2026-05-17-simple-psk-auth.md  2026-05-18-healthcheck.md  2026-05-18-version-endpoint.md
docs/superpowers/specs/: 2026-05-16-rustylight-server-design.md  2026-05-17-simple-psk-auth-design.md  2026-05-18-healthcheck-design.md  2026-05-18-version-endpoint-design.md
examples/: get-state.sh  set-color.sh
packaging/: 99-busylight.rules  postinst  postrm  prerm  rustylight.logrotate  rustylight.service
src/: config.rs  lib.rs  logging.rs  main.rs  tls.rs
src/api/: auth.rs  handlers.rs  mod.rs  openapi.rs
src/device/: manager.rs  mod.rs  models.rs  report.rs
tests/: test_api.rs  test_auth.rs
tests/common/: mod.rs
