[package]
name = "rustylight-server"
version = "0.1.0"
edition = "2021"
authors = ["ftaeger@users.noreply.github.com"]
description = "HTTP REST API server for Kuando Busylight USB device control"
license = "MIT"
repository = "https://github.com/rustylight/rustylight-server"

[[bin]]
name = "rustylight-server"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["json", "macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

# USB HID
hidapi = "2.6"

# TLS + cert generation
rustls = "0.23"
rcgen = { version = "0.13", features = ["pem"] }
rustls-pemfile = "2"
time = "0.3"

# Auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = { version = "0.22", features = [] }

# Config + serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Utilities
rand = "0.8"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
